internal static class AnimatorHash 
{
    public static string IsIdle = "IsIdle";
    public static string SwordAttack = "SwordAttack";
    public static string Shoot = "Shoot";
    public static string Idle = "Idle";
    public static string MeleeIdle = "MeleeIdle";
    public static string MeleeAttack = "MeleeAttack";
    public static string RangeAttack = "RangeAttack";
    public static string RangeIdle = "RangeIdle";
    public static string SwordSpeed = "SwordSpeed";
    public static string BowSpeed = "BowSpeed";
    public static string EnemyMeleeSpeed = "EnemyMeleeSpeed";
    public static string EnemyRangeSpeed = "EnemyRangeSpeed";
}
